--- a/iot-be/package.json
+++ b/iot-be/package.json
@@ -10,6 +10,7 @@
   "author": "xuantri",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^4.21.0",
     "mqtt": "^5.10.1",
